--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- ЭТА СТРОКА РЕШИТ ПРОБЛЕМУ -->
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
