--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <body>
     <div id="root"></div>
     <!-- ЭТА СТРОКА РЕШИТ ПРОБЛЕМУ -->
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
